placeholder for geolocation mapping

--- a/iplot-mpi-tables.ipynb
+++ b/iplot-mpi-tables.ipynb
@@ -5,7 +5,7 @@
    "id": "410141b1",
    "metadata": {},
    "source": [
-    "# Forest carbon accounting\n",
+    "# Claiming forest carbon\n",
     "This notebook reads, transforms, and plots selected elements of the look-up tables from [Schedule 6 of the Climate Change (Forestry Sector) Regulations 2008](https://www.legislation.govt.nz/regulation/public/2008/0355/latest/DLM1633733.html)."
    ]
   },
@@ -351,7 +351,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a5f2b34a85447ba90e1504e92b900be",
+       "model_id": "01e0cd1f0213478ca915f60ed7fb00ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,7 +496,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a671420ad0db49d6b206a25f94d90418",
+       "model_id": "342904b93f7d4e74a768adb3e61c0937",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,9 +551,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d780dbb4",
+   "metadata": {},
+   "source": [
+    "## Geospatial mapping\n",
+    "\n",
+    "Work in progress, but the idea is to show a map of New Zealand with a pinned geolocation, and outline the relevant region for Pinus Radiata (if relevant)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53131fa",
+   "id": "bc265088",
    "metadata": {},
    "outputs": [],
    "source": []
