tidied up and started model fitting

--- a/iplot-mpi-tables.ipynb
+++ b/iplot-mpi-tables.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "source": [
     "## Look-up tables\n",
-    "The look-up tables are stored as four separate files in CSV format, e.g. ``table1.csv``. They contain pre-calculated values for the *cumulative* carbon stock $S_a^T$ measured in tonnes per hectare of a given forest type $T$ and age $a=0,1,\\dots,a^{\\rm max}_{T}$ (in years), where $a^{\\rm max}_{T} = 35$ for $T =$ \"Exotic hardwoods\" and $a^{\\rm max}_{T} = 50$ for all other supported forest types.\n",
+    "The look-up tables are stored as four separate files in CSV format, e.g. ``./tables-data/table1.csv``, which where fetched from the official website using a script ``./tables-data/fetch.py``. \n",
+    "\n",
+    "These tables contain pre-calculated values for the *cumulative* carbon stock $S_a^T$ measured in tonnes per hectare of a given forest type $T$ and age $a=0,1,\\dots,a^{\\rm max}_{T}$ (in years), where $a^{\\rm max}_{T} = 35$ for $T =$ \"Exotic hardwoods\" and $a^{\\rm max}_{T} = 50$ for all other supported forest types.\n",
     "\n",
     "Annual carbon stock *change* $s_a^T$ can be calculated using the following formula:\n",
     "\n",
@@ -39,7 +41,8 @@
    "source": [
     "import pandas as pd             # for handling dataframes\n",
     "import matplotlib.pyplot as plt # for plotting data\n",
-    "import ipywidgets as widgets    # for interactivity"
+    "import ipywidgets as widgets    # for interactivity\n",
+    "import numpy as np              # for more advanced numerics"
    ]
   },
   {
@@ -325,8 +328,9 @@
    ],
    "source": [
     "# load first two tables as dataframes and merge into one\n",
-    "table = pd.concat([pd.read_csv('table1.csv'),\n",
-    "                   pd.read_csv('table2.csv')], axis = 1)\n",
+    "table = pd.concat([pd.read_csv('./tables-data/table1.csv'),\n",
+    "                   pd.read_csv('./tables-data/table2.csv')], \n",
+    "                  axis = 1)\n",
     "\n",
     "# drop both 'Age' columns, since age matches row index\n",
     "table.drop('Age (yrs)', inplace = True, axis = 1)\n",
@@ -351,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01e0cd1f0213478ca915f60ed7fb00ee",
+       "model_id": "15a8cee1cbee4d52b39b99596b4eedb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "342904b93f7d4e74a768adb3e61c0937",
+       "model_id": "e84a839a1bc24db4aa52a1eecac5ef31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -548,6 +552,142 @@
     "\n",
     "# Show the plot\n",
     "ifig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e72ddf",
+   "metadata": {},
+   "source": [
+    "## Fitting models\n",
+    "\n",
+    "Here we attempt to fit a couple of simple models to the data in the look-up tables. Since the data itself was generated using (unspecified) models, our attempts can be thought of as reverse engineering or guesstimating these underlying models. We start with \"Indigenous forest\", because the data seems smoothest and more amenable to fitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603879db",
+   "metadata": {},
+   "source": [
+    "### Logistic growth\n",
+    "\n",
+    "Logistic growth refers to S-shaped growth in time-dependent quantity $Q(t)$ described by the following formula,\n",
+    "\n",
+    "$$\n",
+    "Q(t) = \\frac{a}{1 + e^{b(c-t)}},\n",
+    "$$\n",
+    "\n",
+    "where $t$ is time and $a,b,c$ are parameters controlling, respectively, the upper limit, the growth rate, and the position of the inflection point along the time axis. Let's explore the effects of these parameters in an interactive plot built below.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "35e62460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define logistic function with the three usual parameters\n",
+    "# and a fourth parameter introduced for vertical ofsetting.\n",
+    "def logistic(t,a=1.0, b=1.0, c=0.0, d=0.0):\n",
+    "    return a/(1.0+np.exp(b*(c-t))) + d\n",
+    "\n",
+    "# Define the analytic derivative\n",
+    "def logistic_deriv(t,a=1.0,b=1.0,c=0.0):\n",
+    "    e = np.exp(b*(c-t))\n",
+    "    return a*b*e/(1+e)**2\n",
+    "\n",
+    "# Create vectortized versions\n",
+    "vlogistic = np.vectorize(logistic)\n",
+    "vlogistic_deriv = np.vectorize(logistic_deriv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ebfa7bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wrap the plotting in a function\n",
+    "def plot_logistic(a,b,c,d):\n",
+    "    \n",
+    "    x=np.linspace(0,50,101,endpoint=True)\n",
+    "    \n",
+    "    fig, axs = plt.subplots(2, figsize=[8.0,6.0], sharex = True)\n",
+    "    \n",
+    "    axs[0].plot(x,vlogistic(x, a, b, c, d))\n",
+    "    axs[0].set_ylim(0.0)\n",
+    "    axs[0].set_ylabel('quantity Q(t)')\n",
+    "    axs[0].set_title('Logistic growth' )\n",
+    "    \n",
+    "    axs[1].plot(x,vlogistic_deriv(x, a, b, c))\n",
+    "    axs[1].set_ylim(0.0)\n",
+    "    axs[1].set_xlim(0.0,50.0)\n",
+    "    axs[1].set_xlabel('time units ($t$)')\n",
+    "    axs[1].set_ylabel(\"time derivative Q'(t)\")\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6915931f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d612cab694ae40c08fedf69eed470ce2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=310.0, description='limit ($a$)', max=500.0, min=100.0, step=10.0), Fl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Define some widgets\n",
+    "a_widget = widgets.FloatSlider(value = 310.0, \n",
+    "                               min = 100.0, \n",
+    "                               max = 500.0,\n",
+    "                               step = 10.0,\n",
+    "                               description = 'limit ($a$)')\n",
+    "\n",
+    "b_widget = widgets.FloatSlider(value = 0.16, \n",
+    "                               min = 0.0, \n",
+    "                               max = 1.0,\n",
+    "                               step = 0.02,\n",
+    "                               description='rate ($b$)')\n",
+    "\n",
+    "c_widget = widgets.FloatSlider(value = 16.0, \n",
+    "                               min = 0.0, \n",
+    "                               max = 100.0, \n",
+    "                               description = 'offset ($c$)')\n",
+    "\n",
+    "# Instantiate an interactive plot\n",
+    "ifig = widgets.interactive(plot_logistic, \n",
+    "                           a = a_widget, \n",
+    "                           b = b_widget, \n",
+    "                           c = c_widget, \n",
+    "                           d = widgets.fixed(0))\n",
+    "\n",
+    "# Show the plot\n",
+    "ifig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b62d781c",
+   "metadata": {},
+   "source": [
+    "### Gompertz growth\n",
+    "Work in progress..."
    ]
   },
   {
